--- a/static/base.css
+++ b/static/base.css
@@ -58,3 +58,10 @@ img {
 .fa-folder-o {
     width: 22px;
 }
+
+.back-arrow {
+    font-size: 24px;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
