--- a/templates/note.html
+++ b/templates/note.html
@@ -6,6 +6,11 @@
 
 {% block body %}
 <div id="content">
+    {% if root != "" %}
+    <div class="back-arrow">
+        <a href="/{{ parent }}"><i class="fa fa-chevron-left"></i></a>
+    </div>
+    {% endif %}
     {{ render|safe }}
 </div>
 {% endblock %}
