Documented server functionDocumented server functionss

--- a/templates/dir.html
+++ b/templates/dir.html
@@ -15,7 +15,7 @@
     <h1>{{ dirname }}</h1>
     
     <ul id="file-list">
-        {% if folders == [] %}
+        {% if folders == [] and files == [] %}
         <li class="message">
             Empty
         </li>
