--- a/templates/dir.html
+++ b/templates/dir.html
@@ -30,7 +30,7 @@
         {% endfor %}
         
         {% for file in files %}
-        <li><a href="{{ file.path}}"><i class="fa fa-file-text-o"></i> {{ file.title }}</a></li>
+	<li><a href="/view/{{ dirname }}/{{ file.path}}"><i class="fa fa-file-text-o"></i> {{ file.title }}</a></li>
         {% endfor %} 
     </ul>
 </div>
