--- a/templates/note.html
+++ b/templates/note.html
@@ -2,6 +2,7 @@
 {% block title %}{{ note.title }}{% endblock %}
 {% block head %}
 {{ super() }}
+<link rel="stylesheet" src="/static/note.css"></link>
 {% endblock %}
 
 {% block body %}
