MathJax included in base template Added HTML5-Manifest and favicon.ico

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,16 +9,15 @@
 		<script type="text/x-mathjax-config">
 		MathJax.Hub.Config({
 			extensions: ["tex2jax.js"],
-			jax: ["input/TeX", "output/HTML-CSS"],
+			jax: ["input/TeX", "output/SVG"],
 			tex2jax: {
 			  inlineMath: [ ['$','$'], ["\\(","\\)"] ],
 			  displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
 			  processEscapes: true
 			},
-			"HTML-CSS": { availableFonts: ["TeX"] }
 		});
 		</script>
-	   <script type="text/javascript" src="/static/scripts/MathJax/MathJax.js?config=TeX-AMS_CHTML"></script>
+	   <script type="text/javascript" src="/static/scripts/MathJax.js"></script>
 		{% endblock %}
 	</head>
 	<body>
