Replaced print statements with respective logging call Changed syntax highlighting output from HTML-Only to HTML-CSS combined Fixed inclusion of note.css in note template file

--- a/static/base.css
+++ b/static/base.css
@@ -39,8 +39,8 @@ body {
 h1 {
     text-align: center;
     color: #333;
-    margin-bottom: 3em;
-    text-decoration: underline;
+    margin-bottom: 2em;
+    font-weight: bold;
 }
 
 @media screen and (max-width: 720px) {
