--- a/static/note.css
+++ b/static/note.css
@@ -8,9 +8,10 @@
     border-radius: 10px 10px 0px 0px;
     padding-left: 5px;
 }
-.highlight {
-    padding-left: 5px;
+.codeHighlight {
+    padding-left: 20px;
     padding-bottom: 2px;
     padding-top: 2px;
+    border-radius: 8px 8px 8px 8px;
 }
 
